fix(sidebar): only in English indicator wrapping and alignment

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -88,7 +88,13 @@
   a,
   span:not(.highlight-container) {
     display: inline-flex;
+
+    justify-content: space-between;
+
+    width: 100%;
+
     padding-block: 0.25rem;
+
     vertical-align: middle;
   }
 
